--- a/style.css
+++ b/style.css
@@ -1,33 +1,46 @@
 :root {
     --card-color: #394a7c;
     --white: #eeeeee;
-    --black: #202020;
+    /* --black: #202020; */
+    --black: #3a3838;
     --card-width: 500px;
     --card-height: 300px;
     --preview-width: 50%;
+    --icon-size: 80px;
 }
 
 body {
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    background-color: var(--black);
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #202020;
     color: var(--white);
     text-align: center;
 }
 
-header {
-    min-height: 13vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
 main {
-    min-height: 30vh;
     display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: center;
     color: var(--black);
+    
+    margin-bottom: 2em;
+}
+
+.modal{
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.display{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 p {
@@ -38,7 +51,6 @@ p {
     position: relative;
     perspective: 40em;
     height: var(--card-height);
-    text-align: center;
     margin-bottom: 1em;
     transition: opacity 0.5s, transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: scale(1);
@@ -60,10 +72,12 @@ p {
     z-index: 2;
     background: var(--white);
     width: var(--card-width);
-    height: 100%;
+    min-height: 100%;
     transition: transform 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transform-style: preserve-3d;
     backface-visibility: hidden;
+
+    text-overflow: hidden;
 }
 
 .card-front-flip {
@@ -89,11 +103,14 @@ p {
     justify-content: center;
     align-content: space-between;
     border-radius: 10px 10px 0px 0px;
-
+    font-size: 100px;
     background-color: var(--card-color);
-    /* height: calc(var(--card-height) / 1.9); */
-    height: 100%;
+    height: calc(var(--card-height) / 1.9);
     margin: 0px;
+}
+
+.card-icon-container .material-icons{
+    font-size: 80px;
 }
 
 .card-quote {
@@ -107,16 +124,24 @@ p {
 }
 
 .card-description {
-    height: 50%;
+    /* height: 50%; */
     padding: 1em;
 }
 
 .material-icons {
     border-radius: 100px;
     background-color: var(--white);
-    font-size: 100px;
+    font-size: var(--icon-size);
     color: var(--card-color);
     padding: 0.1em;
+}
+
+.close{
+    position: fixed;
+    top: 25%;
+    right: 25%;
+    font-size: 30px;
+    color: red;
 }
 
 .hidden {
@@ -133,7 +158,7 @@ p {
 #previewList {
     display: flex;
     width: var(--preview-width);
-    height: 60vh;
+    height: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: space-between;
@@ -149,10 +174,11 @@ p {
     transform: scale(1.1);
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     :root {
         --card-width: 350px;
         --card-height: 300px;
         --preview-width: 80%;
+        --icon-size: 55px;
     }
 }
