--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     /* --black: #202020; */
     --black: #3a3838;
     --card-width: 500px;
-    --card-height: 300px;
+    --card-height: 400px;
     --preview-width: 50%;
     --icon-size: 80px;
 }
@@ -65,7 +65,7 @@ p {
 .card-back {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     will-change: transform;
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 black;
@@ -76,18 +76,24 @@ p {
     transition: transform 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transform-style: preserve-3d;
     backface-visibility: hidden;
-
-    text-overflow: hidden;
 }
 
 .card-front-flip {
     transform: rotateY(180deg);
 }
 
+.card-front i{
+    font-size: 80px;
+}
+
+.card-front h2{
+    margin-top: 2em;
+}
+
 .card-back {
-    display: flex;
+    /* display: flex;
     flex-flow: column;
-    align-items: center;
+    align-items: center; */
     position: absolute;
     top: 0;
     transform: rotateY(180deg);
@@ -101,16 +107,11 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    align-content: space-between;
     border-radius: 10px 10px 0px 0px;
     font-size: 100px;
     background-color: var(--card-color);
-    height: calc(var(--card-height) / 1.9);
+    height: calc(var(--card-height) / 2);
     margin: 0px;
-}
-
-.card-icon-container .material-icons{
-    font-size: 80px;
 }
 
 .card-quote {
@@ -153,6 +154,7 @@ p {
 
 #cardTask {
     padding: 1em;
+    height: calc(var(--card-height) / 3.5);
 }
 
 #previewList {
