--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     --white: #eeeeee;
     /* --black: #202020; */
     --black: #3a3838;
-    --card-width: 500px;
-    --card-height: 400px;
+    --card-width: 450px;
+    --card-height: 350px;
     --preview-width: 50%;
     --icon-size: 80px;
 }
@@ -72,7 +72,7 @@ p {
     z-index: 2;
     background: var(--white);
     width: var(--card-width);
-    min-height: 100%;
+    /* min-height: 100%; */
     transition: transform 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transform-style: preserve-3d;
     backface-visibility: hidden;
@@ -84,10 +84,6 @@ p {
 
 .card-front i{
     font-size: 80px;
-}
-
-.card-front h2{
-    margin-top: 2em;
 }
 
 .card-back {
@@ -137,14 +133,6 @@ p {
     padding: 0.1em;
 }
 
-.close{
-    position: fixed;
-    top: 25%;
-    right: 25%;
-    font-size: 30px;
-    color: red;
-}
-
 .hidden {
     visibility: hidden;
     transition: opacity 0.1s, transform 0.1s ease-in, visibility 0.1s;
@@ -154,7 +142,7 @@ p {
 
 #cardTask {
     padding: 1em;
-    height: calc(var(--card-height) / 3.5);
+    /* height: calc(var(--card-height) / 4); */
 }
 
 #previewList {
